# freewili-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml
doc/source/: examples.rst  index.rst  serial.rst
examples/: events.py
freewili/: cli.py  cli_serial.py  fw.py  fw_serial.py  serial_util.py  serialport.py  types.py  usb_util.py
tests/: test_fw.py  test_i2c.py  test_serial.py  test_types.py
tests/assets/: invalid.fwi
